--- a/brme-client/package.json
+++ b/brme-client/package.json
@@ -31,6 +31,7 @@
     "angular-svg-icon": "^6.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "engine.io-client": "^3.2.1",
     "jquery": "^3.3.1",
     "ngrx-store-freeze": "^0.2.4",
     "npm": "^6.3.0",
