--- a/brme-api/.gitignore
+++ b/brme-api/.gitignore
@@ -1,4 +1,4 @@
-.idea/
+/.idea
 ###> symfony/framework-bundle ###
 /.env
 /public/bundles/
@@ -14,3 +14,5 @@
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+/public/media/*
